Implement OAuth2 social login and Gmail SMTP integration
- Add Google and Discord OAuth2 authentication support
- Implement Gmail SMTP service with HTML email templates
- Create OAuth2Service for social login user processing
- Update SecurityConfig for hybrid authentication (local + OAuth2)
- Add comprehensive email verification system
- Fix JWT token management inconsistencies
- Update frontend with OAuth login buttons and Suspense boundaries
- Add rate limiting and security enhancements
- Create comprehensive TODO development checklist

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>